<resources>
    <string name="app_name">PetTime</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_maps">MapaPrincipal</string>
    <string name="bienvenid_a_pettimeapp">Bienvenid@ a PetTimeApp</string>
    <string name="mas_cuidado">Más cuidado para tu mascota!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_mapa_principal">Mapa Principal</string>
    <string name="title_activity_login">Iniciar Sesión</string>

    <!-- Strings related to Register -->
    <string name="string_enter_name">Enter your name</string>
    <string name="string_choose_username">Choose your username</string>
    <string name="string_choose_password">Choose your password</string>
    <string name="string_enter_email">Enter your email</string>
    <string name="button_register">Register</string>
    <string name="iniciar_sesi_n">Iniciar Sesión</string>
    <string name="registro">Registro</string>
    <string name="imagen_entrada">Imagen entrada</string>
    <string name="title_activity_mapa_secundario">Mapa</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="crear_cuenta">Crear Cuenta</string>
    <string name="title_activity_prueba">Map</string>
    <string name="title_activity_registrar_mascota">Registrar Mascota</string>
    <string name="title_activity_navegador_principal">Menú Principal</string>
    <string name="title_activity_navegador">Navegador</string>

    <!-- Conjunto de Strings para el View Spinner -->
    <string-array name="Especies">
        <item>Canino</item>
    </string-array>

</resources>
